# PythonProjectService1

./: .env.sample  .gitignore  pyproject.toml
clients/: admin.py  forms.py  models.py  urls.py  views.py
clients/migrations/: 0001_initial.py
clients/templates/clients/: base.html  clients_confirm_delete.html  clients_detail.html  clients_form.html  clients_list.html  home.html
clients/templates/clients/include/: footer.html  header.html
config/: settings.py  urls.py
mailing/: admin.py  forms.py  models.py  services.py  urls.py  views.py
mailing/management/commands/: send_messages.py
mailing/migrations/: 0001_initial.py  0002_initial.py  0003_alter_campaign_end_time_alter_campaign_sent_messages_and_more.py
mailing/templates/mailing/: campaign_confirm_delete.html  campaign_detail.html  campaign_list.html  message_confirm_delete.html  message_list.html
users/: admin.py  forms.py  models.py  services.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_alter_user_options.py
users/templates/users/: login.html  password_reset_complete.html  password_reset_confirm.html  password_reset_done.html  password_reset_email.html  password_reset_form.html  register.html
